--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container">
-    <div class="header">
+		<div class="header">
      <div class="header_top">
        <div class="logo"></div>
         <a class="social1" href="s"><img src="images/facebook-icon.png" width="8px" height="16px"/></a>
@@ -45,20 +45,22 @@
     		<li><a href="#">Gadgets</a></li>
     		<li><a href="#">cantact</a></li>                  
     	</ul>
-     <div class="new_products">
+			<div class="new_products">
      	<h3>New products</h3>
         <div> 
          <div class="prod">
-          <div class='prod_img'><img src="images/Image.png" alt="продукт"></div>
-          <div class='prod_name'><p>Single Thruster 2014</p></div>
+					<div class='prod_img'><img src="images/Image.png" alt="продукт"></div>
+					<div class='prod_name'><p>Single Thruster 2014</p></div>
           <div class='prod_price'><p>&#8364;.865.00</p></div>
+					<div class="new"><p>New</p></div>
          </div>
          <div class="prod">
          	<div class='prod_img'><img src="images/Image.png" alt="продукт"></div>
          	<div class='prod_name'><p>Freestyle Wave FSW</p></div>
          	<div class='prod_price'><p>&#8364;.770.50</p></div>
-         	<div class='prod_discount'><p><del>&#8364;.1,270.15</del></p></div>
-         </div> 
+					<div class='prod_discount'><p><del>&#8364;.1,270.15</del></p></div>
+					<div class="hot"><p>Hot</p></div>
+				</div> 
          <div class="prod">
          	<div class='prod_img'><img src="images/Image.png" alt="продукт"></div>
          	<div class='prod_name'><p>The White Collection SURFBOARD 2014</p></div>
@@ -83,7 +85,11 @@
           </div>  
          </div> 
      </div>
-     <div class="top_products">
+			<div class="now_is_open">
+				<p>Now is open!</p>
+			</div>
+			
+		 <div class="top_products">
      	<h3>top products</h3>
      	<div> 
       	<div class="prod">
@@ -104,27 +110,51 @@
       	</div> 
       </div>     
      </div>
-		 <div class="sale_products">
+		<div class="sale_products">
      	<h3>sale products</h3>
      	<div> 
       	<div class="prod">
       		<div class='prod_img'><img src="images/Image.png" alt="продукт"></div>
-      		<div class='prod_name'><p>ushingham Lightning 2014</p></div>
-      		<div class='prod_price'><p>&#8364;.2,960.95</p></div>
-      		<div class='prod_discount'><p><del>&#8364;.3,100.15</del></p></div>
+      		<div class='prod_name'><p>SYNCRO MENS QS M</p></div>
+      		<div class='prod_price'><p>&#8364;.249.95</p></div>
+      		<div class='prod_discount'><p><del>&#8364;450.15</del></p></div>
       	</div>
       	<div class="prod">
       	 	<div class='prod_img'><img src="images/Image.png" alt="продукт"></div>
-      	 	<div class='prod_name'><p>CYPHER HEAT VES M</p></div>
-      	 	<div class='prod_price'><p>&#8364;.849.95</p></div>
+      	 	<div class='prod_name'><p>RAMOS - SHIRT FOR MEN</p></div>
+      	 	<div class='prod_price'><p>&#8364;.459.65</p></div>
+					<div class='prod_discount'><p><del>&#8364;.570.65</del></p></div>
       	</div> 
       	<div class="prod">
       		<div class='prod_img'><img src="images/Image.png" alt="продукт"></div>
-      		<div class='prod_name'><p>SYNCRO WOMENS QS M</p></div>
-      		<div class='prod_price'><p>&#8364;.1,110.99</p></div>
+      		<div class='prod_name'><p>SixSixOne Evo Wired Full Face</p></div>
+      		<div class='prod_price'><p>&#8364;.240.00</p></div>
+					<div class='prod_discount'><p><del>&#8364;.370.65</del></p></div>
       	</div> 
       </div>     
      </div>
+			<div class="brand">
+				<p>Brand</p>
+			</div>
+			<div class="instagram">
+				<div>
+					<img src="images/insta-icon1.png" width="28px" height="28px"/>
+					<p>Instagram feed: #surfhouse</p>
+				</div>
+				<ul>
+    		<li> <a href="s"><img src="images/Livello-25.png" width="185px" height="185px"/></a></li>
+				<li> <a href="s"><img src="images/Livello-26.png" width="185px" height="185px"/></a></li>
+					<li> <a href="s"><img src="images/Livello-27.png" width="185px" height="185px"/></a></li>
+					<li> <a href="s"><img src="images/Livello-28.png" width="185px" height="185px"/></a></li>
+					<li> <a href="s"><img src="images/Livello-29.png" width="185px" height="185px"/></a></li>
+					<li> <a href="s"><img src="images/Livello-30.png" width="185px" height="185px"/></a></li>
+    		</ul>
+			</div>
+			<div class="social">
+				
+			</div>
+			<div class="social">
+			</div>
 		</div>
 	</div>
 </body>
